feat: Implementando refactor para fachada